--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <!-- JS -->
     <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.lazy.min.js"></script>
     <script src="slick/slick.min.js"></script>
     <script src="js/scripts.js"></script>
   </head>
@@ -125,7 +126,7 @@
           <div class="col-md-4 adv-col border-white py-5 py-md-0">
             <div class="advantage border-white text-center white text-center">
               <div class="img">
-                <img src="img/advantages/gear.svg" alt="UNIVERSALITY" />
+                <img class="lazy" data-src="img/advantages/gear.svg" alt="UNIVERSALITY" />
               </div>
               <h3 class="mt-3 font-weight-bold">UNIVERSALITY</h3>
               <p class="mt-3 font-weight-light">
@@ -139,7 +140,7 @@
           <div class="col-md-4 adv-col border-white py-5 py-md-0">
             <div class="advantage border-white text-center white text-center">
               <div class="img">
-                <img src="img/advantages/speed.svg" alt="FLEXIBILITY & SPEED" />
+                <img class="lazy" data-src="img/advantages/speed.svg" alt="FLEXIBILITY & SPEED" />
               </div>
               <h3 class="mt-3 font-weight-bold">FLEXIBILITY & SPEED</h3>
               <p class="mt-3 font-weight-light text-left">
@@ -169,7 +170,7 @@
             <div class="advantage text-center white text-center">
               <div class="img">
                 <img
-                  src="img/advantages/control.svg"
+                  class="lazy" data-src="img/advantages/control.svg"
                   alt="FLEXIBILITY & SPEED"
                 />
               </div>
@@ -199,9 +200,9 @@
     <!-- LEARN MORE -->
     <section class="learn-more bg-bright-gray py-5 position-relative">
       <img
-        src="img/lm-bg.png"
+        data-src="img/lm-bg.png"
         alt="JFrog Conan"
-        class="lm-bg position-absolute"
+        class="lm-bg position-absolute lazy"
       />
       <div class="container text-center">
         <!-- TITLE -->
@@ -287,49 +288,49 @@
 
         <div class="users-flex d-flex">
           <div class="user-box inner">
-            <img src="img/brands/company_29.png" alt="Cient" />
+            <img class="lazy" data-src="img/brands/company_29.png" alt="Cient" />
           </div>
           <div class="user-box inner">
-            <img src="img/brands/company_27.png" alt="Cient" />
+            <img class="lazy" data-src="img/brands/company_27.png" alt="Cient" />
           </div>
           <div class="user-box inner">
-            <img src="img/brands/company_28.png" alt="Cient" />
+            <img class="lazy" data-src="img/brands/company_28.png" alt="Cient" />
           </div>
           <div class="user-box inner">
-            <img src="img/brands/company_26.png" alt="Cient" />
+            <img class="lazy" data-src="img/brands/company_26.png" alt="Cient" />
           </div>
           <div class="user-box inner">
-            <img src="img/brands/company_25.png" alt="Cient" />
+            <img class="lazy" data-src="img/brands/company_25.png" alt="Cient" />
           </div>
           <div class="user-box inner">
-            <img src="img/brands/company_32.png" alt="Cient" />
+            <img class="lazy" data-src="img/brands/company_32.png" alt="Cient" />
           </div>
           <div class="user-box inner">
-            <img src="img/brands/company_33.png" alt="Cient" />
+            <img class="lazy" data-src="img/brands/company_33.png" alt="Cient" />
           </div>
           <div class="user-box inner">
-            <img src="img/brands/company_34.png" alt="Cient" />
+            <img class="lazy" data-src="img/brands/company_34.png" alt="Cient" />
           </div>
           <div class="user-box inner">
-            <img src="img/brands/company_30.png" alt="Cient" />
+            <img class="lazy" data-src="img/brands/company_30.png" alt="Cient" />
           </div>
           <div class="user-box inner">
-            <img src="img/brands/company_31.png" alt="Cient" />
+            <img class="lazy" data-src="img/brands/company_31.png" alt="Cient" />
           </div>
           <div class="user-box inner">
-            <img src="img/brands/company_39.png" alt="Cient" />
+            <img class="lazy" data-src="img/brands/company_39.png" alt="Cient" />
           </div>
           <div class="user-box inner">
-            <img src="img/brands/company_38.png" alt="Cient" />
+            <img class="lazy" data-src="img/brands/company_38.png" alt="Cient" />
           </div>
           <div class="user-box inner">
-            <img src="img/brands/company_36.png" alt="Cient" />
+            <img class="lazy" data-src="img/brands/company_36.png" alt="Cient" />
           </div>
           <div class="user-box inner">
-            <img src="img/brands/company_37.png" alt="Cient" />
+            <img class="lazy" data-src="img/brands/company_37.png" alt="Cient" />
           </div>
           <div class="user-box inner">
-            <img src="img/brands/company_35.png" alt="Cient" />
+            <img class="lazy" data-src="img/brands/company_35.png" alt="Cient" />
           </div>
         </div>
       </div>
@@ -348,10 +349,10 @@
           <div class="col-12">
             <div class="testi-cartousel-wrapper">
               <button class="cs-slick-nav cs-slick-left">
-                <img src="img/left-arrow.svg" alt="left" />
+                <img class="lazy" data-src="img/left-arrow.svg" alt="left" />
               </button>
               <button class="cs-slick-nav cs-slick-right">
-                <img src="img/left-arrow.svg" alt="right" />
+                <img class="lazy" data-src="img/left-arrow.svg" alt="right" />
               </button>
               <!-- CAROUSEL -->
               <div class="testis-carousel">
@@ -761,8 +762,8 @@
     <!-- CONTACT US -->
     <section class="contact-us position-relative py-5">
       <img
-        src="img/hero-bg.png"
-        class="position-absolute contact-bg"
+        data-src="img/hero-bg.png"
+        class="lazy position-absolute contact-bg"
         alt="JFrog Conan"
       />
       <div class="container form-container pt-2 pb-5">
@@ -849,76 +850,54 @@
                 <div class="col-sm-3">
                   <h4 class="blue mb-1">GET</h4>
                   <ul>
-                    <li>
-                      <a href="downloads.html">
-                        Download
-                      </a>
-                    </li>
-                    <li>
-                      <a href="https://conan.io/center">
-                        Conan-Center
-                      </a>
-                    </li>
-                    <li>
-                      <a href="https://github.com/conan-io/conan">
-                        GitHub
-                      </a>
-                    </li>
+                    <li><a href="downloads.html">
+                      Download
+                    </a></li>
+                    <li><a href="https://conan.io/center">
+                      Conan-Center
+                    </a></li>
+                    <li><a href="https://github.com/conan-io/conan">
+                      GitHub
+                    </a></li>
                   </ul>
                 </div>
                 <div class="col-sm-3">
                   <h4 class="blue mb-1">Resources</h4>
                   <ul>
-                    <li>
-                      <a href="https://docs.conan.io/">
-                        Docs
-                      </a>
-                    </li>
-                    <li>
-                      <a href="https://blog.conan.io/">
-                        Blog
-                      </a>
-                    </li>
+                    <li><a href="https://docs.conan.io/">
+                      Docs
+                    </a></li>
+                    <li><a href="https://blog.conan.io/">
+                      Blog
+                    </a></li>
                   </ul>
                 </div>
                 <div class="col-sm-3">
                   <h4 class="blue mb-1">Legal</h4>
                   <ul>
-                    <li>
-                      <a href="privacy-policy.html">
-                        Privacy Policy
-                      </a>
-                    </li>
-                    <li>
-                      <a href="terms-conditions.html">
-                        Terms
-                      </a>
-                    </li>
+                    <li><a href="privacy-policy.html">
+                      Privacy Policy
+                    </a></li>
+                    <li><a href="terms-conditions.html">
+                      Terms
+                    </a></li>
                   </ul>
                 </div>
                 <div class="col-sm-3">
                   <h4 class="blue mb-1">Social</h4>
                   <ul>
-                    <li>
-                      <a href="https://github.com/conan-io">
-                        Github
-                      </a>
-                    </li>
-                    <li>
-                      <a href="https://twitter.com/conan_io">
-                        Twitter
-                      </a>
-                    </li>
-                    <li>
-                      <a href="https://facebook.com/conan.io">
-                        Facebook
-                      </a>
-                    </li>
-                    <li>
-                      <a href="https://cpplang.​slack.​com/?id=conan">
-                        Slack #conan
-                      </a>
-                    </li>
+                    <li><a href="https://github.com/conan-io">
+                      Github
+                    </a></li>
+                    <li><a href="https://twitter.com/conan_io">
+                      Twitter
+                    </a></li>
+                    <li><a href="https://facebook.com/conan.io">
+                      Facebook
+                    </a></li>
+                    <li><a href="https://cpplang.​slack.​com/?id=conan">
+                      Slack #conan
+                    </a></li>
                   </ul>
                 </div>
               </div>
@@ -933,72 +912,58 @@
                 <div class="mail-submit d-flex flex-wrap align-items-center">
                   <!-- email -->
                   <div class="form-input form-email mr-2">
-                    <label for="email"
-                      >Email
-                      <abbr title="required" aria-label="required"
-                        >*</abbr
-                      ></label
-                    >
-                    <input
-                      id="footerEmail"
-                      type="email"
-                      name="footer-email"
-                      placeholder="*Email"
-                      required
-                    />
+                    <label for="email">Email <abbr title="required" aria-label="required">*</abbr></label>
+                    <input id="footerEmail" type="email" name="footer-email" placeholder="*Email" required>
                   </div>
 
                   <!-- submit -->
                   <div class="form-input form-submit text-center my-3">
-                    <input
-                      type="submit"
-                      value="Subscribe"
-                      class="cta bg-green white"
-                    />
+                    <input type="submit" value="Subscribe" class="cta bg-green white">
                   </div>
                 </div>
 
                 <!-- policy -->
                 <div class="form-checkbox form-policy mt-2 d-flex">
-                  <input id="policy" type="checkbox" name="policy" required />
+                  <input id="policy" type="checkbox" name="policy" required>
                   <span></span>
-                  <label class="show-label" for="policy"
-                    >I have read and agreed to the Privacy Policy
-                    <abbr title="required" aria-label="required">*</abbr></label
-                  >
+                  <label class="show-label" for="policy">I have read and agreed to the Privacy Policy <abbr title="required" aria-label="required">*</abbr></label>
                 </div>
+
               </form>
 
               <ul class="socials d-flex mt-1 mb-0 pt-2 pl-0">
                 <!-- TWITTER -->
                 <li>
                   <a class="mr-2" href="https://twitter.com/conan_io">
-                    <img src="img/social/twitter.svg" alt="twitter" />
+                    <img class="lazy" data-src="img/social/twitter.svg" alt="twitter">
                   </a>
                 </li>
                 <!-- FACEBOOK -->
                 <li>
                   <a class="mr-2" href="https://facebook.com/conan.io">
-                    <img src="img/social/facebook.svg" alt="facebook" />
+                    <img class="lazy" data-src="img/social/facebook.svg" alt="facebook">
                   </a>
                 </li>
                 <!-- SLACK -->
                 <li>
                   <a class="mr-2" href="https://cpplang.​slack.​com/?id=conan">
-                    <img src="img/social/slack.svg" alt="slack" />
+                    <img class="lazy" data-src="img/social/slack.svg" alt="slack">
                   </a>
                 </li>
                 <!-- GITHUB -->
                 <li>
                   <a class="mr-2" href="https://github.com/conan-io">
-                    <img src="img/social/github.svg" alt="github" />
+                    <img class="lazy" data-src="img/social/github.svg" alt="github">
                   </a>
                 </li>
               </ul>
+
             </div>
           </div>
         </div>
+
       </div>
     </footer>
+
   </body>
 </html>
