learn more hide image on mobile

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
       <img
         data-src="img/lm-bg.png"
         alt="JFrog Conan"
-        class="lm-bg position-absolute lazy"
+        class="lm-bg position-absolute lazy d-none d-xl-inline"
       />
       <div class="container text-center">
         <!-- TITLE -->
