contact image background responsive

--- a/index.html
+++ b/index.html
@@ -888,7 +888,7 @@
     <section class="contact-us position-relative py-5">
       <img
         data-src="img/hero-bg.png"
-        class="lazy position-absolute contact-bg"
+        class="lazy position-absolute contact-bg d-none d-xl-inline"
         alt="JFrog Conan"
       />
       <div class="container form-container pt-2 pb-5">
