--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -118,7 +118,10 @@ The look and feel of the Service is copyright ©2018 JFrog. All rights reserved.
 </section>
 
 <!-- FOOTER -->
-<footer id="siteFooter" class="py-5 bg-bright-gray">
+<footer
+  id="siteFooter"
+  class="py-5 bg-bright-gray"
+>
   <div class="container">
     <div class="row">
       <div class="col-md-7 footer-left d-md-flex d-none align-items-center">
@@ -128,53 +131,53 @@ The look and feel of the Service is copyright ©2018 JFrog. All rights reserved.
               <h4 class="blue mb-1">GET</h4>
               <ul>
                 <li><a href="downloads.html">
-                  Download
-                </a></li>
+                    Download
+                  </a></li>
                 <li><a href="https://conan.io/center">
-                  Conan-Center
-                </a></li>
+                    Conan-Center
+                  </a></li>
                 <li><a href="https://github.com/conan-io/conan">
-                  GitHub
-                </a></li>
+                    GitHub
+                  </a></li>
               </ul>
             </div>
             <div class="col-sm-3">
               <h4 class="blue mb-1">Resources</h4>
               <ul>
                 <li><a href="https://docs.conan.io/">
-                  Docs
-                </a></li>
+                    Docs
+                  </a></li>
                 <li><a href="https://blog.conan.io/">
-                  Blog
-                </a></li>
+                    Blog
+                  </a></li>
               </ul>
             </div>
             <div class="col-sm-3">
               <h4 class="blue mb-1">Legal</h4>
               <ul>
                 <li><a href="privacy-policy.html">
-                  Privacy Policy
-                </a></li>
+                    Privacy Policy
+                  </a></li>
                 <li><a href="terms-conditions.html">
-                  Terms
-                </a></li>
+                    Terms
+                  </a></li>
               </ul>
             </div>
             <div class="col-sm-3">
               <h4 class="blue mb-1">Social</h4>
               <ul>
                 <li><a href="https://github.com/conan-io">
-                  Github
-                </a></li>
+                    Github
+                  </a></li>
                 <li><a href="https://twitter.com/conan_io">
-                  Twitter
-                </a></li>
+                    Twitter
+                  </a></li>
                 <li><a href="https://facebook.com/conan.io">
-                  Facebook
-                </a></li>
+                    Facebook
+                  </a></li>
                 <li><a href="https://cpplang.​slack.​com/?id=conan">
-                  Slack #conan
-                </a></li>
+                    Slack #conan
+                  </a></li>
               </ul>
             </div>
           </div>
@@ -183,54 +186,112 @@ The look and feel of the Service is copyright ©2018 JFrog. All rights reserved.
 
       <div class="col-md-5 footer-right">
         <div class="inner pl-4">
-          <form class="footer-form" action="" method="post">
-            <h3 class="pt-4" class="mb-3">Sign up for updates</h3>
+          <form
+            class="footer-form"
+            action="https://formspree.io/mlelogyj"
+            method="POST"
+            id="footerForm"
+          >
+            <h3 class="mb-3">Sign up for updates</h3>
 
             <div class="mail-submit d-flex flex-wrap align-items-center">
               <!-- email -->
               <div class="form-input form-email mr-2">
-                <label for="email">Email <abbr title="required" aria-label="required">*</abbr></label>
-                <input id="footerEmail" type="email" name="footer-email" placeholder="*Email" required>
+                <label for="email">Email <abbr
+                    title="required"
+                    aria-label="required"
+                  >*</abbr></label>
+                <input
+                  id="footerEmail"
+                  type="email"
+                  name="footer-email"
+                  placeholder="*Email"
+                  required
+                >
               </div>
 
               <!-- submit -->
               <div class="form-input form-submit text-center my-3">
-                <input type="submit" value="Subscribe" class="cta bg-green white">
+                <input
+                  type="submit"
+                  value="Subscribe"
+                  class="cta bg-green white"
+                  id="footerFormSubmit"
+                >
               </div>
             </div>
 
             <!-- policy -->
             <div class="form-checkbox form-policy mt-2 d-flex">
-              <input id="policy" type="checkbox" name="policy" required>
+              <input
+                id="policy"
+                type="checkbox"
+                name="policy"
+                required
+              >
               <span></span>
-              <label class="show-label" for="policy">I have read and agreed to the Privacy Policy <abbr title="required" aria-label="required">*</abbr></label>
+              <label
+                class="show-label"
+                for="policy"
+              >I have read and agreed to the Privacy Policy <abbr
+                  title="required"
+                  aria-label="required"
+                >*</abbr></label>
             </div>
-
+            <p id="footerFormStatus"></p>
           </form>
 
           <ul class="socials d-flex mt-1 mb-0 pt-2 pl-0">
             <!-- TWITTER -->
             <li>
-              <a class="mr-2" href="https://twitter.com/conan_io">
-                <img src="img/social/twitter.svg" alt="twitter">
+              <a
+                class="mr-2"
+                href="https://twitter.com/conan_io"
+              >
+                <img
+                  class="lazy"
+                  data-src="img/social/twitter.svg"
+                  alt="twitter"
+                >
               </a>
             </li>
             <!-- FACEBOOK -->
             <li>
-              <a class="mr-2" href="https://facebook.com/conan.io">
-                <img src="img/social/facebook.svg" alt="facebook">
+              <a
+                class="mr-2"
+                href="https://facebook.com/conan.io"
+              >
+                <img
+                  class="lazy"
+                  data-src="img/social/facebook.svg"
+                  alt="facebook"
+                >
               </a>
             </li>
             <!-- SLACK -->
             <li>
-              <a class="mr-2" href="https://cpplang.​slack.​com/?id=conan">
-                <img src="img/social/slack.svg" alt="slack">
+              <a
+                class="mr-2"
+                href="https://cpplang.​slack.​com/?id=conan"
+              >
+                <img
+                  class="lazy"
+                  data-src="img/social/slack.svg"
+                  alt="slack"
+                >
               </a>
             </li>
             <!-- GITHUB -->
             <li>
-              <a class="mr-2" href="https://github.com/conan-io">
-                <img src="img/social/github.svg" alt="github">
+              <a
+                class="mr-2"
+                href="https://github.com/conan-io"
+              >
+                <img
+                  class="lazy"
+                  data-src="img/social/github.svg"
+                  alt="github"
+                >
               </a>
             </li>
           </ul>
@@ -242,5 +303,6 @@ The look and feel of the Service is copyright ©2018 JFrog. All rights reserved.
   </div>
 </footer>
 
+<script src="js/footer_formspree.js"></script>
 </body>
 </html>
