--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -366,8 +366,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 href="https://twitter.com/conan_io"
               >
                 <img
-                  class="lazy"
-                  data-src="img/social/twitter.svg"
+                  src="img/social/twitter.svg"
                   alt="twitter"
                 >
               </a>
@@ -379,8 +378,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 href="https://facebook.com/conan.io"
               >
                 <img
-                  class="lazy"
-                  data-src="img/social/facebook.svg"
+                  src="img/social/facebook.svg"
                   alt="facebook"
                 >
               </a>
@@ -392,8 +390,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 href="https://cpplang.​slack.​com/?id=conan"
               >
                 <img
-                  class="lazy"
-                  data-src="img/social/slack.svg"
+                  src="img/social/slack.svg"
                   alt="slack"
                 >
               </a>
@@ -405,8 +402,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 href="https://github.com/conan-io"
               >
                 <img
-                  class="lazy"
-                  data-src="img/social/github.svg"
+                  src="img/social/github.svg"
                   alt="github"
                 >
               </a>
