--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -249,8 +249,7 @@ The look and feel of the Service is copyright ©2018 JFrog. All rights reserved.
                 href="https://twitter.com/conan_io"
               >
                 <img
-                  class="lazy"
-                  data-src="img/social/twitter.svg"
+                  src="img/social/twitter.svg"
                   alt="twitter"
                 >
               </a>
@@ -262,8 +261,7 @@ The look and feel of the Service is copyright ©2018 JFrog. All rights reserved.
                 href="https://facebook.com/conan.io"
               >
                 <img
-                  class="lazy"
-                  data-src="img/social/facebook.svg"
+                  src="img/social/facebook.svg"
                   alt="facebook"
                 >
               </a>
@@ -275,8 +273,7 @@ The look and feel of the Service is copyright ©2018 JFrog. All rights reserved.
                 href="https://cpplang.​slack.​com/?id=conan"
               >
                 <img
-                  class="lazy"
-                  data-src="img/social/slack.svg"
+                  src="img/social/slack.svg"
                   alt="slack"
                 >
               </a>
@@ -288,8 +285,7 @@ The look and feel of the Service is copyright ©2018 JFrog. All rights reserved.
                 href="https://github.com/conan-io"
               >
                 <img
-                  class="lazy"
-                  data-src="img/social/github.svg"
+                  src="img/social/github.svg"
                   alt="github"
                 >
               </a>
