mkto forms, styling, and more

--- a/index.html
+++ b/index.html
@@ -900,73 +900,12 @@
         </div>
         <div class="row">
           <div class="col-12">
-            <form
-              class="cu-form"
-              action="https://formspree.io/xgezpodn"
-              method="POST"
-              id="contactUsForm"
-            >
-              <!-- name -->
-              <div class="form-input form-name">
-                <label for="name">Name
-                  <abbr
-                    title="required"
-                    aria-label="required"
-                  >*</abbr>
-                </label>
-                <input
-                  id="name"
-                  type="text"
-                  name="name"
-                  placeholder="*Name"
-                  required
-                />
-              </div>
 
-              <!-- email -->
-              <div class="form-input form-email">
-                <label for="email">Email
-                  <abbr
-                    title="required"
-                    aria-label="required"
-                  >*</abbr></label>
-                <input
-                  id="email"
-                  type="email"
-                  name="email"
-                  placeholder="*Email"
-                  required
-                />
-              </div>
+            <script src="//app-lon04.marketo.com/js/forms2/js/forms2.min.js"></script>
+            <form id="mktoForm_2684"></form>
+            <script>MktoForms2.loadForm("//app-lon04.marketo.com", "256-FNZ-187", 2684);</script>
 
-              <!-- message -->
-              <div class="form-input form-message">
-                <label for="message">Message
-                  <abbr
-                    title="required"
-                    aria-label="required"
-                  >*</abbr></label>
-                <input
-                  id="message"
-                  type="text"
-                  name="message"
-                  placeholder="*Message"
-                  required
-                />
-              </div>
 
-              <!-- submit -->
-              <div class="form-input form-submit text-center">
-                <input
-                  type="submit"
-                  value="Submit"
-                  class="cta bg-green white mt-4"
-                  id="contactUsSubmit"
-                />
-              </div>
-
-              <p id="contactUsStatus"></p>
-            </form>
           </div>
         </div>
       </div>
@@ -1040,61 +979,14 @@
           </div>
 
           <div class="col-md-5 footer-right">
-            <div class="inner pl-4">
-              <form
-                class="footer-form"
-                action="https://formspree.io/mlelogyj"
-                method="POST"
-                id="footerForm"
-              >
-                <h3 class="mb-3">Sign up for updates</h3>
+            <div class="inner pl-0 pl-md-4">
 
-                <div class="mail-submit d-flex flex-wrap align-items-center">
-                  <!-- email -->
-                  <div class="form-input form-email mr-2">
-                    <label for="email">Email <abbr
-                        title="required"
-                        aria-label="required"
-                      >*</abbr></label>
-                    <input
-                      id="footerEmail"
-                      type="email"
-                      name="footer-email"
-                      placeholder="*Email"
-                      required
-                    >
-                  </div>
-
-                  <!-- submit -->
-                  <div class="form-input form-submit text-center my-3">
-                    <input
-                      type="submit"
-                      value="Subscribe"
-                      class="cta bg-green white"
-                      id="footerFormSubmit"
-                    >
-                  </div>
-                </div>
-
-                <!-- policy -->
-                <div class="form-checkbox form-policy mt-2 d-flex">
-                  <input
-                    id="policy"
-                    type="checkbox"
-                    name="policy"
-                    required
-                  >
-                  <span></span>
-                  <label
-                    class="show-label"
-                    for="policy"
-                  >I have read and agreed to the Privacy Policy <abbr
-                      title="required"
-                      aria-label="required"
-                    >*</abbr></label>
-                </div>
-                <p id="footerFormStatus"></p>
-              </form>
+              <div class="mktoFormWrapper">
+                <!-- FOOTER FORM HERE -->
+                <script src="//app-lon04.marketo.com/js/forms2/js/forms2.min.js"></script>
+                <form id="mktoForm_1479"></form>
+                <script>MktoForms2.loadForm("//app-lon04.marketo.com", "256-FNZ-187", 1479);</script>
+              </div>
 
               <ul class="socials d-flex mt-1 mb-0 pt-2 pl-0">
                 <!-- TWITTER -->
@@ -1162,8 +1054,6 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery.lazy.min.js"></script>
     <script src="slick/slick.min.js"></script>
-    <script src="js/hp_formspree.js"></script>
-    <script src="js/footer_formspree.js"></script>
     <script src="js/scripts.js"></script>
 
   </body>
