--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -185,61 +185,14 @@ The look and feel of the Service is copyright ©2018 JFrog. All rights reserved.
       </div>
 
       <div class="col-md-5 footer-right">
-        <div class="inner pl-4">
-          <form
-            class="footer-form"
-            action="https://formspree.io/mlelogyj"
-            method="POST"
-            id="footerForm"
-          >
-            <h3 class="mb-3">Sign up for updates</h3>
+        <div class="inner pl-0 pl-md-4">
 
-            <div class="mail-submit d-flex flex-wrap align-items-center">
-              <!-- email -->
-              <div class="form-input form-email mr-2">
-                <label for="email">Email <abbr
-                    title="required"
-                    aria-label="required"
-                  >*</abbr></label>
-                <input
-                  id="footerEmail"
-                  type="email"
-                  name="footer-email"
-                  placeholder="*Email"
-                  required
-                >
-              </div>
-
-              <!-- submit -->
-              <div class="form-input form-submit text-center my-3">
-                <input
-                  type="submit"
-                  value="Subscribe"
-                  class="cta bg-green white"
-                  id="footerFormSubmit"
-                >
-              </div>
-            </div>
-
-            <!-- policy -->
-            <div class="form-checkbox form-policy mt-2 d-flex">
-              <input
-                id="policy"
-                type="checkbox"
-                name="policy"
-                required
-              >
-              <span></span>
-              <label
-                class="show-label"
-                for="policy"
-              >I have read and agreed to the Privacy Policy <abbr
-                  title="required"
-                  aria-label="required"
-                >*</abbr></label>
-            </div>
-            <p id="footerFormStatus"></p>
-          </form>
+          <div class="mktoFormWrapper">
+            <!-- FOOTER FORM HERE -->
+            <script src="//app-lon04.marketo.com/js/forms2/js/forms2.min.js"></script>
+            <form id="mktoForm_1479"></form>
+            <script>MktoForms2.loadForm("//app-lon04.marketo.com", "256-FNZ-187", 1479);</script>
+          </div>
 
           <ul class="socials d-flex mt-1 mb-0 pt-2 pl-0">
             <!-- TWITTER -->
@@ -299,6 +252,5 @@ The look and feel of the Service is copyright ©2018 JFrog. All rights reserved.
   </div>
 </footer>
 
-<script src="js/footer_formspree.js"></script>
 </body>
 </html>
