--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -189,9 +189,9 @@ The look and feel of the Service is copyright ©2018 JFrog. All rights reserved.
 
           <div class="mktoFormWrapper">
             <!-- FOOTER FORM HERE -->
-            <script src="//app-lon04.marketo.com/js/forms2/js/forms2.min.js"></script>
+            <script src="https://leap.jfrog.com/js/forms2/js/forms2.min.js"></script>
             <form id="mktoForm_1479"></form>
-            <script>MktoForms2.loadForm("//app-lon04.marketo.com", "256-FNZ-187", 1479);</script>
+            <script>MktoForms2.loadForm("https://leap.jfrog.com", "256-FNZ-187", 1479);</script>
           </div>
 
           <ul class="socials d-flex mt-1 mb-0 pt-2 pl-0">
