style and markup improve

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </section>
 
     <!-- DIAGRAM -->
-    <section class="diagram py-5">
+    <section class="diagram py-5" id="diagram">
       <div class="container py-3">
         <div class="row">
           <div class="col-12 text-center">
@@ -182,7 +182,7 @@
     </section>
 
     <!-- ADVANTAGES -->
-    <section class="advantages py-2 py-md-5 bg-blue">
+    <section class="advantages py-2 py-md-5 bg-blue" id="advantages">
       <div class="container py-5">
         <div class="row">
           <!-- ONE ADVANTAGE -->
@@ -270,7 +270,7 @@
     </section>
 
     <!-- LEARN MORE -->
-    <section class="learn-more bg-bright-gray py-5 position-relative">
+    <section class="learn-more bg-bright-gray py-5 position-relative" id="learnMore">
       <img
         data-src="img/lm-bg.png"
         alt="JFrog Conan"
@@ -356,7 +356,7 @@
     </section>
 
     <!-- OUR USERS -->
-    <section class="users my-4 py-5">
+    <section class="users my-4 py-5" id="users">
       <div class="container">
 
         <div class="users-image-stock d-none" id="usersStock">
@@ -519,7 +519,7 @@
     </section>
 
     <!-- OUR USERS VOICE CAROUSEL -->
-    <section class="testis py-5 bg-dark-blue white">
+    <section class="testis py-5 bg-dark-blue white" id="testis">
       <div class="container">
         <div class="row">
           <div class="col-12">
@@ -924,7 +924,7 @@
     </section>
 
     <!-- CONTACT US -->
-    <section class="contact-us position-relative py-5">
+    <section class="contact-us position-relative py-5" id="contactUs">
       <img
         data-src="img/hero-bg.png"
         class="lazy position-absolute contact-bg d-none d-xl-inline"
