--- a/downloads.html
+++ b/downloads.html
@@ -47,7 +47,7 @@
                     <a href="https://facebook.com/conan.io" target="_blank">
                         <img src="img/facebook-icon.png" width="22" height="21" alt="Facebook" />
                     </a>
-                    <a href="https://cpplang.now.sh/" target="_blank">
+                    <a href="https://cpplang-inviter.cppalliance.org/" target="_blank">
                         <img src="img/slack-icon.png" width="22" height="21" alt="Slack" />
                     </a>
                     <a href="https://github.com/conan-io" target="_blank">
@@ -264,7 +264,7 @@
                     <li><a href="https://github.com/conan-io">GitHub</a></li>
                     <li><a href="https://twitter.com/conan_io">Twitter</a></li>
                     <li><a href="https://facebook.com/conan.io">Facebook</a></li>
-                    <li><a href="https://cpplang.now.sh/">Slack #conan</a></li>
+                    <li><a href="https://cpplang-inviter.cppalliance.org/">Slack #conan</a></li>
                 </ul>
             </div>
         </div>
