home page update

--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
     <section class="advantages py-2 py-md-5 bg-blue" id="advantages">
       <div class="container py-5">
         <div class="row">
+
           <!-- ONE ADVANTAGE -->
           <div class="col-md-4 adv-col border-white py-5 py-md-0">
             <div class="advantage border-white text-center white text-center">
@@ -196,10 +197,14 @@
                 />
               </div>
               <h3 class="mt-3 font-weight-bold">UNIVERSALITY</h3>
-              <p class="mt-3 font-weight-light">
-                Manage all binaries for all platforms and configurations (also
-                build from sources).
-              </p>
+              <div class="advantage-text text-left">
+                <p class="mt-3 font-weight-light line-1">
+                  <strong>All platforms.</strong> Windows, Linux, Apple, FreeBSD, Android, iOS, embedded, cross-building, bare metal, etc.
+                </p>
+                <p class="line-2">
+                  <strong>All build systems.</strong> Visual Studio MSBuild, CMake, Makefiles, SCons, etc. Extensible to any build system.
+                </p>
+              </div>
             </div>
           </div>
 
@@ -214,23 +219,13 @@
                 />
               </div>
               <h3 class="mt-3 font-weight-bold">FLEXIBILITY & SPEED</h3>
-              <p class="mt-3 font-weight-light text-left">
-                Build your C and C++ packages for all platforms (Windows, Linux,
-                Apple, FreeBSD, Android, iOS, embedded,
-              </p>
-              <div class="read-more-wrapper text-left">
-                <a
-                  href="#readMore"
-                  class="readMoreLink read-more text-left white border-bottom border-white"
-                >
-                  Read more<span> > </span>
-                </a>
-                <p class="e-dn readMoreContent read-more-content text-left">
-                  cross-building, etc) and build systems (Visual Studio MSB
-                  Develop your projects faster and reproducibly with
-                  fully-automated dependency management of your binaries:
-                  transitive dependencies, conflict detection, dependencies
-                  overriding, conditional dependencies.
+              <div class="advantage-text text-left">
+                <p class="mt-3 font-weight-light line-1">
+                  <strong>Full management of binaries. </strong> <br />
+                  Create, manage and reuse any number of binaries, for any configuration: platform, compiler, version, architectures… or build from sources at will.
+                </p>
+                <p class="line-2">
+                  <strong>Fully automated dependency management.</strong> Transitive dependencies, conflicts detection, dependency overriding, conditional dependencies.
                 </p>
               </div>
             </div>
@@ -247,24 +242,17 @@
                 />
               </div>
               <h3 class="mt-3 font-weight-bold">CONTROL</h3>
-              <p class="mt-3 font-weight-light text-left">
-                Run your own server with the free JFrog Artifactory Community
-                Edition on-prem to fully own your packages and binaries.
-              </p>
-              <div class="read-more-wrapper text-left">
-                <a
-                  href="#readMore"
-                  class="readMoreLink read-more text-left white border-bottom border-white"
-                >
-                  Read more<span> > </span>
-                </a>
-                <p class="e-dn readMoreContent read-more-content text-left">
-                  Modify, redistribute, and extend your MIT-licensed and fully
-                  open source Conan software, even for commercial purposes.
+              <div class="advantage-text text-left">
+                <p class="mt-3 font-weight-light line-1">
+                  <strong>Decentralized client-server architecture.</strong> Run your own server for free with JFrog Artifactory on-prem to fully own your packages and binaries.
+                </p>
+                <p>
+                  <strong>Conan is Free, open source software</strong> with the permissive MIT license. Use, modify, redistribute, and extend it - even for commercial purposes.
                 </p>
               </div>
             </div>
           </div>
+
         </div>
       </div>
     </section>
