--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@
               <a
                 href="downloads.html"
                 class="cta bg-green white mt-4"
-              >Get Started</a>
+              >
+                Download
+              </a>
             </div>
           </div>
         </div>
