--- a/index.html
+++ b/index.html
@@ -144,11 +144,10 @@
           <div class="col-12 text-center">
             <div class="hero-content py-3">
               <h1 class="white">
-                Conan, the C/C++ <br />
-                Package Manager for Developers
+                Conan, the C/C++ Package Manager
               </h1>
               <p class="my-3 px-4 white">
-                The open source, decentralized and multi-platform package
+                The open source, decentralized and multi-platform package <br />
                 manager to create and share all your native binaries.
               </p>
               <a
@@ -1015,10 +1014,12 @@
           <div class="col-md-5 footer-right">
             <div class="inner pl-0 pl-md-4">
 
+              <h4 class="mb-3 sign-up-title">Sign up for release updates</h4>
               <div class="mktoFormWrapper">
                 <!-- FOOTER FORM HERE -->
                 <script src="https://leap.jfrog.com/js/forms2/js/forms2.min.js"></script>
-                <form id="mktoForm_1479"></form>
+                <form id="mktoForm_1479">
+                </form>
                 <script>MktoForms2.loadForm("https://leap.jfrog.com", "256-FNZ-187", 1479);</script>
               </div>
 
