footer form title

--- a/downloads.html
+++ b/downloads.html
@@ -501,6 +501,7 @@ helm install --name artifactory jfrog/artifactory-oss
           <div class="col-md-5 footer-right">
             <div class="inner pl-0 pl-md-4">
 
+              <h4 class="mb-3 sign-up-title">Sign up for release updates</h4>
               <div class="mktoFormWrapper">
                 <!-- FOOTER FORM HERE -->
                 <script src="https://leap.jfrog.com/js/forms2/js/forms2.min.js"></script>
