--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -186,7 +186,7 @@ The look and feel of the Service is copyright ©2018 JFrog. All rights reserved.
 
       <div class="col-md-5 footer-right">
         <div class="inner pl-0 pl-md-4">
-
+          <h4 class="mb-3 sign-up-title">Sign up for release updates</h4>
           <div class="mktoFormWrapper">
             <!-- FOOTER FORM HERE -->
             <script src="https://leap.jfrog.com/js/forms2/js/forms2.min.js"></script>
