--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -304,6 +304,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="col-md-5 footer-right">
         <div class="inner pl-0 pl-md-4">
 
+          <h4 class="mb-3 sign-up-title">Sign up for release updates</h4>
           <div class="mktoFormWrapper">
             <!-- FOOTER FORM HERE -->
             <script src="https://leap.jfrog.com/js/forms2/js/forms2.min.js"></script>
