conan center open in new tab

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                 <img
                   src="img/small-search.png"
                   alt="Search"
+                  target="_blank"
                 /> Conan-Center
               </a>
             </nav>
